--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
-  "devDependencies": {
-    "live-server": "^1.2.1"
-  },
-  "scripts": {
-    "dev": "live-server"
-  }
+    "devDependencies": {
+        "live-server": "^1.2.1"
+    },
+    "scripts": {
+        "dev": "live-server",
+        "tw": "tailwind"
+
+    },
+    "dependencies": {
+        "autoprefixer": "^10.1.0",
+        "postcss": "^8.2.1",
+        "tailwindcss": "^2.0.1"
+    }
 }
